feat: adicionado service de encontro